--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 					<!--<li style="list-style-type: none;"> -->
 						<li><a href="#one" class="active">ABOUT ME</a></li>
-						<li><a href="#projects">PROJECTS</a></li>
+						<li><a href="#Projects">PROJECTS</a></li>
 						<li><a href="#talks">PRESENTATIONS</a></li>
 						<li><a href="#two">PUBLICATIONS</a></li>
 						<li><a href="#three">CONTACT</a></li>
