--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 Always eager to explore more about what’s under the sky and beyond.<br />
 <br />
-I am a Postdoctoral Fellow working under professor Yongyu Zhang at the Research Center for Marine Biology and Carbon Sequestration, Qingdao institute of bioenergy and bioprocess technology, Chinese Academy of Science.<br />
+I am a Postdoctoral Fellow working under professor Yongyu Zhang at the Research Center for Marine Biology and Carbon Sequestration, Qingdao institute of bioenergy and bioprocess technology, Chinese Academy of Sciences.<br />
 
 <br />
 My research interests lie in marine microbial ecology with particular emphasis on interactions between algae, bacteria, and viruses and their influence on marine nutrient cycling.  I use bioinformatics tools such as metagenomics, metatranscriptomics coupled with flow cytometry, isotope labeling and wet lab analysis to elucidate microbial processes in natural systems. <br />
