--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 Always eager to explore more about what’s under the sky and beyond.<br />
 <br />
-I am a Postdoctoral Fellow working under professor Yongyu Zhang at the Research Center for Marine Biology and Carbon Sequestration, Qingdao institute of bioenergy and bioprocess technology, Chinese Academy of Sciences.<br />
+I am a Postdoctoral Fellow working under professor <a href="http://mbcs.qibebt.ac.cn/eng/info/1026/1045.htm" target="_blank"> Yongyu Zhang</a> at the <a href="http://mbcs.qibebt.ac.cn/eng/index.htm" target="_blank"> Research Center for Marine Biology and Carbon Sequestration, Qingdao institute of bioenergy and bioprocess technology, Chinese Academy of Sciences</a>.<br />
 
 <br />
 My research interests lie in marine microbial ecology with particular emphasis on interactions between algae, bacteria, and viruses and their influence on marine nutrient cycling.  I use bioinformatics tools such as metagenomics, metatranscriptomics coupled with flow cytometry, isotope labeling and wet lab analysis to elucidate microbial processes in natural systems. <br />
@@ -91,7 +91,7 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
    <p> <img src="images/N2-fix.png" align='left' width="300" class="border"/>
        <strong><br />
       Role of algae-bacteria interactions in bacterial nitrogen fixation </strong><br />
-     <strong>May 2022:  </strong>  We had exciting findings from our <a href="http://mbcs.qibebt.ac.cn/info/1040/1039.htm" target="_blank">Sci. adv. publication</a> From there we will continue to investigate how interactions between algae and bacteria can support heterotrophic bacterial nitrogen fixation.
+     <strong>May 2022:  </strong>  We had exciting findings from our <a href="http://mbcs.qibebt.ac.cn/info/1040/1039.htm" target="_blank">Sci. adv. publication</a> From here we will continue to investigate how interactions between algae and bacteria can support heterotrophic bacterial nitrogen fixation.
    <br /><br /><p>
 </div> </div>
 
@@ -107,7 +107,7 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 								<div>
 									<p>
 						       <img src="images/aslo_aug.2022.png" align='left' width="250" class="border"/> <strong><br /><br />
-						        Decoding the mechanisms behind the recurrent mutualism between marine Synechococcus sp. PCC7002 and heterotrophic bacterial community despite environmental interference under long-term coexistence</strong><br />
+						        Decoding the mechanisms behind the recurrent mutualism between marine <i>Synechococcus</i> sp. PCC7002 and heterotrophic bacterial community despite environmental interference under long-term coexistence</strong><br />
 						      <strong>August 2022:</strong>  <a href="https://www.aslo.org/amplifying-voices-webinars/"> ASLO-Amplifying Voices Webinar</a>.
 						   <br /><br /><br />
 						   <p>
@@ -129,7 +129,7 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 										<table>
 										<tr>
 												<td>In press</td>
-												<td><strong> Nair S</strong>, Zhang Z, Li H, Zhao H, Shen H, Gao S, Jiao N, Zhang Y. Inherent tendency of Synechocccus and heterotrophic bacteria for mutualism on long-term coexistence despite environmental interference. <i>Science Advances</i>, 2022. eabf4792</a>. </td>
+												<td><strong> Nair S</strong>, Zhang Z, Li H, Zhao H, Shen H, Gao S, Jiao N, Zhang Y. Inherent tendency of <i>Synechococcus</i> and heterotrophic bacteria for mutualism on long-term coexistence despite environmental interference. <i>Science Advances</i>, 2022. eabf4792</a>. </td>
 												</tr>
 											<tr>
 												<td>2022</td>
