--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 
 										<table>
 										<tr>
-												<td>In press</td>
-												<td><strong> Nair S</strong>, Zhang Z, Li H, Zhao H, Shen H, Gao S, Jiao N, Zhang Y. Inherent tendency of <i>Synechococcus</i> and heterotrophic bacteria for mutualism on long-term coexistence despite environmental interference. <i>Science Advances</i>, 2022. eabf4792</a>. </td>
+												<td>2022</td>
+												<td><strong> Nair S</strong>, Zhang Z, Li H, Zhao H, Shen H, Gao S, Jiao N, Zhang Y. Inherent tendency of <i>Synechococcus</i> and heterotrophic bacteria for mutualism on long-term coexistence despite environmental interference. <i>Science Advances</i>, 2022. doi: <a href="https://www.science.org/doi/10.1126/sciadv.abf4792">10.1126/sciadv.abf4792</a>.  </td>
 												</tr>
 											<tr>
 												<td>2022</td>
