--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
    <p> <img src="images/N2-fix.png" align='left' width="300" class="border"/>
        <strong><br />
       Role of algae-bacteria interactions in bacterial nitrogen fixation </strong><br />
-     <strong>May 2022:  </strong>  We had exciting findings from our <a href="http://mbcs.qibebt.ac.cn/info/1040/1039.htm" target="_blank">Sci. adv. publication</a>. We will continue to investigate how interactions between algae and bacteria can support heterotrophic bacterial nitrogen fixation.
+     <strong>May 2022:  </strong>  We had exciting findings from our <a href="https://www.science.org/doi/10.1126/sciadv.abf4792" target="_blank">Sci. adv. publication</a>. We will continue to investigate how interactions between algae and bacteria can support heterotrophic bacterial nitrogen fixation.
    <br /><br /><p>
 </div> </div>
 
