--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 									<p>
 						       <img src="images/aslo_aug.2022.png" align='left' width="250" class="border"/> <strong><br /><br />
 						        Decoding the mechanisms behind the recurrent mutualism between marine <i>Synechococcus</i> sp. PCC7002 and heterotrophic bacterial community despite environmental interference under long-term coexistence</strong><br />
-						      <strong>August 2022:</strong>  <a href="https://www.aslo.org/amplifying-voices-webinars/"> ASLO-Amplifying Voices Webinar</a>.
+						      <strong>August 2022:</strong>  <a href="https://www.aslo.org/amplifying-voices-webinars/"> ASLO-Amplifying Voices Webinar. <a href="https://www.youtube.com/watch?v=jY5HHVxAkRM" target="_blank"> Watch a recorded version of the talk.</a> </a>.
 						   <br /><br /><br />
 						   <p>
 
