--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 									<p>
 						       <img src="images/aslo_aug.2022.png" align='left' width="250" class="border"/> <strong><br /><br />
 						         Marine <i>Synechococcus</i> and heterotrophic bacterial tends to be friends for survival in nutrient-depleted environments</strong><br />
-						      <strong>August 2022:</strong>  <a href="https://www.aslo.org/amplifying-voices-webinars/"> ASLO-Amplifying Voices Webinar.</a> Watch a recorded version of the talk <a href="https://www.youtube.com/watch?v=jY5HHVxAkRM" target="_blank"> here.</a>.
+						      <strong>August 2022:</strong>  <a href="https://www.aslo.org/amplifying-voices-webinars/"> ASLO-Amplifying Voices Webinar.</a> Watch a recorded version of the talk <a href="https://www.youtube.com/watch?v=jY5HHVxAkRM" target="_blank"> here</a>.
 						   <br /><br /><br />
 						   <p>
 
