--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<header>
 					<span class="image"><img src="images/DSCF4388.jpg" alt="" height="200" /></span>
 					<h1 id="logo"><a href="#">Shailesh S. Nair</a></h1>
-					<p>Postdoctoral Researcher <br/>
+					<p>Assistant Professor (research) <br/>
 					<p>Qingdao Institute of Bioenergy and Bioprocess Technology<br/>
 					<p>Chinese Academy of Sciences<br/>
 				</header>
@@ -59,7 +59,7 @@
 
 Always eager to explore more about what’s under the sky and beyond.<br />
 <br />
-I am a Postdoctoral Fellow working under professor <a href="http://mbcs.qibebt.ac.cn/eng/info/1026/1045.htm" target="_blank"> Yongyu Zhang</a> at the <a href="http://mbcs.qibebt.ac.cn/eng/index.htm" target="_blank"> Research Center for Marine Biology and Carbon Sequestration, Qingdao institute of bioenergy and bioprocess technology, Chinese Academy of Sciences</a>.<br />
+I am an assistant professor at <a href="http://mbcs.qibebt.ac.cn/eng/info/1026/1045.htm" target="_blank"> Yongyu Zhang lab</a> at the <a href="http://mbcs.qibebt.ac.cn/eng/index.htm" target="_blank"> Research Center for Marine Biology and Carbon Sequestration, Qingdao institute of bioenergy and bioprocess technology, Chinese Academy of Sciences</a>.<br />
 
 <br />
 My research interests lie in marine microbial ecology with particular emphasis on interactions between algae, bacteria, and viruses and their influence on marine nutrient cycling.  I use bioinformatics tools such as metagenomics, metatranscriptomics coupled with flow cytometry, isotope labeling and wet lab analysis to elucidate microbial processes in natural systems. <br />
@@ -80,8 +80,8 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 								<div>
    <p> <img src="images/kelp.png" align='left' width="300" class="border"/>
        <strong><br />
-      New project! </strong><br />
-     <strong>April 2022:  </strong> This project aims to investigate into the recent kelp disease outbreak in Weihai, Shandong, China. We will carry out multi-parameter assessment of the  kelp and the surrounding sea.   </a>
+      Investigating large-scale kelp disease event! </strong><br />
+     <strong>April 2022:  </strong> This project aims to investigate into the recent kelp disease outbreak in Weihai, Shandong, China. <a href="https://pubs.acs.org/doi/10.1021/acs.est.3c09921">Check out the article</a>.   </a>
    <br /><br /><p>
 </div> </div>
 
@@ -95,6 +95,7 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
    <br /><br /><p>
 </div> </div>
 
+	<a href="http://mbcs.qibebt.ac.cn/info/1040/1170.htm">detailed project list</a>					
 
 </section>
 
@@ -121,6 +122,10 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 <!-- Two PUBLICATIONS -->
 					<section id="two">
 						<h1>Publications</h1>
+						<br />* co-first author
+						# corrosponding author<br />
+
+<br />
 
 										<!--<li class="fa-book"> </li>-->
 										<a name="pubs"></a>
@@ -128,8 +133,17 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 
 										<table>
 										<tr>
+												<td>2024</td>
+												<td>Zhang Y,<strong> Nair S</strong>#, Zhang Z, Zhao J, Zhao H, Lu L, Chang L, Jiao N. Adverse environmental perturbations may threaten kelp farming sustainability by exacerbating Enterobacterales diseases. <i>ES&T</i>, 2023. doi: <a href="https://doi.org/10.1021/acs.est.3c09921">10.1021/acs.est.3c09921</a>.  </td>
+												</tr>	
+										<tr>
+												<td>2023</td>
+												<td>Zhang Z, Li D, Xie R, Guo R,<strong> Nair S</strong>, Han H, ZhanG G, Zhao Q, Zhang Z, Jiao N, Zhang Y. Plastoquinone synthesis inhibition by tetrabromo biphenyldiol as a widespread algicidal mechanism of marine bacteria. <i>ISME J</i>, 2023. doi: <a href="https://doi.org/10.1038/s41396-023-01510-0">10.1038/s41396-023-01510-0</a>.  </td>
+												</tr>
+											<tr>
+						
 												<td>2022</td>
-												<td><strong> Nair S</strong>, Zhang Z, Li H, Zhao H, Shen H, Gao S, Jiao N, Zhang Y. Inherent tendency of <i>Synechococcus</i> and heterotrophic bacteria for mutualism on long-term coexistence despite environmental interference. <i>Science Advances</i>, 2022. doi: <a href="https://www.science.org/doi/10.1126/sciadv.abf4792">10.1126/sciadv.abf4792</a>.  </td>
+												<td><strong> Nair S*</strong>, Zhang Z*, Li H, Zhao H, Shen H, Gao S, Jiao N, Zhang Y. Inherent tendency of <i>Synechococcus</i> and heterotrophic bacteria for mutualism on long-term coexistence despite environmental interference. <i>Science Advances</i>, 2022. doi: <a href="https://www.science.org/doi/10.1126/sciadv.abf4792">10.1126/sciadv.abf4792</a>.  </td>
 												</tr>
 											<tr>
 												<td>2022</td>
@@ -158,7 +172,7 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 
 											<tr>
 												<td>2021</td>
-												<td>Zhang Z, <strong>Nair S (co-first author)</strong>, Tang L, Zhao H, Hu Z, Chen M, Zhang Y, Kao S-J, Jiao N, Zhang Y. Long-term survival of <i>Synechococcus</i> and heterotrophic bacteria without external nutrient supply after changes in their relationship from antagonism to mutualism. <i>mBio</i>, 2021. doi: <a href="https://journals.asm.org/doi/10.1128/mBio.01614-21" target="_blank">10.1128/mBio.01614-21</a>. </td>
+												<td>Zhang Z*, <strong>Nair S*</strong>, Tang L, Zhao H, Hu Z, Chen M, Zhang Y, Kao S-J, Jiao N, Zhang Y. Long-term survival of <i>Synechococcus</i> and heterotrophic bacteria without external nutrient supply after changes in their relationship from antagonism to mutualism. <i>mBio</i>, 2021. doi: <a href="https://journals.asm.org/doi/10.1128/mBio.01614-21" target="_blank">10.1128/mBio.01614-21</a>. </td>
 											 </td>
 											</tr>
 
