--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
 Always eager to explore more about what’s under the sky and beyond.<br />
 <br />
-I am an assistant professor at <a href="http://mbcs.qibebt.ac.cn/eng/info/1026/1045.htm" target="_blank"> Yongyu Zhang lab</a> at the <a href="http://mbcs.qibebt.ac.cn/eng/index.htm" target="_blank"> Research Center for Marine Biology and Carbon Sequestration, Qingdao institute of bioenergy and bioprocess technology, Chinese Academy of Sciences</a>.<br />
+I am an assistant professor at <a href="http://mbcs.qibebt.ac.cn/eng/info/1026/1045.htm" target="_blank"> Yongyu Zhang's lab</a> at the <a href="http://mbcs.qibebt.ac.cn/eng/index.htm" target="_blank"> Research Center for Marine Biology and Carbon Sequestration, Qingdao institute of bioenergy and bioprocess technology, Chinese Academy of Sciences</a>.<br />
 
 <br />
 My research interests lie in marine microbial ecology with particular emphasis on interactions between algae, bacteria, and viruses and their influence on marine nutrient cycling.  I use bioinformatics tools such as metagenomics, metatranscriptomics coupled with flow cytometry, isotope labeling and wet lab analysis to elucidate microbial processes in natural systems. <br />
@@ -81,7 +81,7 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
    <p> <img src="images/kelp.png" align='left' width="300" class="border"/>
        <strong><br />
       Investigating large-scale kelp disease event! </strong><br />
-     <strong>April 2022:  </strong> This project aims to investigate into the recent kelp disease outbreak in Weihai, Shandong, China. <a href="https://pubs.acs.org/doi/10.1021/acs.est.3c09921">Check out the article</a>.   </a>
+     <strong>April 2022:  </strong> This project aims to investigate the recent kelp disease outbreak in Weihai, Shandong, China. <a href="https://pubs.acs.org/doi/10.1021/acs.est.3c09921">Check out the article</a>.   </a>
    <br /><br /><p>
 </div> </div>
 
@@ -122,8 +122,8 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 <!-- Two PUBLICATIONS -->
 					<section id="two">
 						<h1>Publications</h1>
-						<br />* co-first author
-						# corrosponding author<br />
+						<br />* = co-first author
+						# = corrosponding, author<br />
 
 <br />
 
@@ -134,7 +134,7 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 										<table>
 										<tr>
 												<td>2024</td>
-												<td>Zhang Y,<strong> Nair S</strong>#, Zhang Z, Zhao J, Zhao H, Lu L, Chang L, Jiao N. Adverse environmental perturbations may threaten kelp farming sustainability by exacerbating Enterobacterales diseases. <i>ES&T</i>, 2023. doi: <a href="https://doi.org/10.1021/acs.est.3c09921">10.1021/acs.est.3c09921</a>.  </td>
+												<td>Zhang Y,<strong> Nair S</strong>#, Zhang Z, Zhao J, Zhao H, Lu L, Chang L, Jiao N. Adverse environmental perturbations may threaten kelp farming sustainability by exacerbating Enterobacterales diseases. <i>ES&T</i>, 2024. doi: <a href="https://doi.org/10.1021/acs.est.3c09921">10.1021/acs.est.3c09921</a>.  </td>
 												</tr>	
 										<tr>
 												<td>2023</td>
