--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket,
 <!-- Two PUBLICATIONS -->
 					<section id="two">
 						<h1>Publications</h1>
-						<br />* = co-first author
-						# = corrosponding, author<br />
+						<br /><i>* = co-first author,
+						# = corrosponding author</i><br />
 
 <br />
 
