--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 								<li><a href="https://github.com/ShailNair" class="icon fa-github"><span class="label">Github</span></a></li>
 <li><a href="https://www.researchgate.net/profile/Shailesh-Nair" class="fab fa-researchgate" style="font-size:25px"></a></li>
 <li><a href="https://scholar.google.com/citations?view_op=list_works&hl=en&user=4aPlo98AAAAJ" class="ai ai-google-scholar-square ai-1x" style="font-size:25px"></span></a></li>
-								 <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=71a9b8c5cb09d509deca693b6bfbf0e9e8cf05b6'></script>
-<script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1164193/t/5"></script>
+								 <script type="text/javascript" src="https://www.free-counters.org/count/f4z1"></script><br>
+ <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://whomania.com/ctr?id=2c55acf35299037c52c3b35a0bbadb417f3f2e4e'></script>
 
 					</nav>
 
