--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Always eager to explore more about what’s under the sky and beyond.<br />
 I am an assistant professor at <a href="http://mbcs.qibebt.ac.cn/eng/info/1026/1045.htm" target="_blank"> Yongyu Zhang's lab</a> at the <a href="http://mbcs.qibebt.ac.cn/eng/index.htm" target="_blank"> Research Center for Marine Biology and Carbon Sequestration, Qingdao institute of bioenergy and bioprocess technology, Chinese Academy of Sciences</a>.<br />
 
 <br />
-My research interests lie in marine microbial ecology with particular emphasis on interactions between algae, bacteria, and viruses and their influence on marine nutrient cycling.  I use bioinformatics tools such as metagenomics, metatranscriptomics coupled with flow cytometry, isotope labeling and wet lab analysis to elucidate microbial processes in natural systems. <br />
+My research interests lie in marine microbial ecology with particular emphasis on interactions between algae, bacteria, and viruses and their influence on marine nutrient cycling.  I use multi-omics approaches such as metagenomics, and metatranscriptomics coupled with flow cytometry, isotope labeling and wet lab analysis to elucidate microbial processes in natural systems. <br />
 
 ​<br />
 Aside from academics, I enjoy cooking, writing stories/poems, swimming, cricket, and other fitness activities.  <br />
